@@ -41,6 +41,17 @@
 		</operation>
 	</file>
 
+	<file name="$themedir/Display.template.php">
+		<operation>
+			<search position="replace"><![CDATA[
+	var smf_template_subject_normal = \'<a href="', $scripturl, '?topic=', $context['current_topic'], '.msg%msg_id%#msg%msg_id%">%subject%</a>\';
+]]></search>
+			<add><![CDATA[
+	var smf_template_subject_normal = \'<\' + \'a href="', $scripturl, '?topic=', $context['current_topic'], '.msg%msg_id%#msg%msg_id%">%subject%</a>\';
+]]></add>
+		</operation>
+	</file>
+
 	<file name="$sourcedir/QueryString.php">
 		<operation>
 			<search position="replace"><![CDATA[
@@ -69,6 +80,7 @@ function cleanRequest()
 			if (!isset($_REQUEST['pretty']))
 				$context['pretty']['oldschoolquery'] = true;
 		} else {
+			$_REQUEST['board'] = str_replace(array('&#039;', '\\'), array(chr(18), ''), $_REQUEST['board']);
 			$pretty_board_lookup = unserialize($modSettings['pretty_board_lookup']);
 			$board = (int) isset($pretty_board_lookup[$_REQUEST['board']]) ? $pretty_board_lookup[$_REQUEST['board']] : 0;
 		}
@@ -87,8 +99,7 @@ function cleanRequest()
 			if (!isset($_REQUEST['pretty']))
 				$context['pretty']['oldschoolquery'] = true;
 		} else {
-			$_REQUEST['topic'] = str_replace('\\', '', $_REQUEST['topic']);
-			$_REQUEST['topic'] = str_replace('&#039;', "\'", $_REQUEST['topic']);
+			$_REQUEST['topic'] = str_replace(array('&#039;', '\\'), array(chr(18), ''), $_REQUEST['topic']);
 			//	Are we feeling lucky?
 			$query = db_query("
 				SELECT ID_TOPIC
