@@ -6,14 +6,21 @@
 	forum's SSI.php file.
 *******************************************************************************/
 
-//	Pretty URLs - profiles-ext-none v0.7
+//	Pretty URLs - profiles-ext-none v0.8
 
 //	If SSI.php is in the same place as this file, and SMF isn't defined, this is being run standalone.
 if (file_exists(dirname(__FILE__) . '/SSI.php') && !defined('SMF'))
+{
 	require_once(dirname(__FILE__) . '/SSI.php');
+	$standalone = true;
+	$txt = array('package_installed_done' => '');
+}
 //	Hmm... no SSI.php and no SMF?
 elseif (!defined('SMF'))
 	die('<b>Error:</b> Cannot install - please verify you put this in the same place as SMF\'s SSI.php.');
+
+//	Start the list
+$output = '<ul>';
 
 require_once($sourcedir . '/Subs-PrettyUrls.php');
 
@@ -31,8 +38,20 @@ $prettyFilters['profiles'] = array(
 	),
 );
 updateSettings(array('pretty_filters' => addslashes(serialize($prettyFilters))));
+$output .= '<li>Adding the profiles filter</li>';
 
 //	Update everything now
 updateFilters();
+$output .= '<li>Processing the installed filters</li></ul>';
+
+//	Output the list of database changes
+$txt['package_installed_done'] = $output . $txt['package_installed_done'];
+if (isset($standalone))
+{
+	echo '<title>Installing Pretty URLs - Profiles 0.7</title>
+<h1>Installing Pretty URLs - Profiles 0.7</h1>
+<h2>Database changes</h2>
+', $txt['package_installed_done'];
+}
 
 ?>
